# un9n

./: .gitattributes  .gitignore  AVATAR_EXPRESSION_SYSTEM.md  CLAUDE.md  CMakeLists.txt  COMPREHENSIVE_IMPROVEMENT_ANALYSIS.md  COSMIC_ORDER_INTEGRATION.md  CRITICAL_ASSETS_PRIORITY.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_INDEX.md  DTESNN Chatbot Test Report.md  DTESN_IMPLEMENTATION_GUIDE.md  Deep-Tree-EchoExpressionLibrary_v3.md  DeepTreeEchoAvatarExpressionSystem_v3.md  ECHO_AGENT_DEFINITIONS.md  ECHO_GOALS_ASSESSMENT.md  ECHO_GOALS_ASSESSMENT_2025_12_29.md  ECHO_INTEGRATION_STATUS.md  Echo State Network reservoirpy.ESN — ReservoirPy 0.4.1 documentation.md  FINAL_COMPREHENSIVE_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_PROGRESS_REPORT.md  FINAL_REPORT_2025_12_29.md  GAMING_MASTERY_OPTIMIZATION.md  GenerateProjectFiles.bat  IMPLEMENTATION_GUIDES_SUMMARY.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_UPDATED.md  IMPLEMENTATION_SUMMARY_NEXT_STEPS.md  IMPROVEMENT_ANALYSIS.md  INTEGRATION_GUIDE_2025_12_29.md  INTEGRATION_SUMMARY.md  LYRA_ADAPTATION_STRATEGY.md  MASTER_IMPLEMENTATION_ROADMAP.md  NEXT_STEPS.md  PROGRESS_REPORT.md  PROGRESS_REPORT_FINAL.md  PROGRESS_REPORT_NEXT_PRIORITIES.md  PROGRESS_REPORT_TOP3.md  (+25 more)
DeepTreeEcho/Testing/E2E/: AvatarIntegrationE2E.cpp  CMakeLists.txt  CognitivePipelineE2E.cpp  ReservoirCognitiveE2E.cpp
DeepTreeEcho/Testing/UnitTests/: ActiveInferenceTests.cpp  AvatarCognitionTests.cpp  CMakeLists.txt  CoreTests.cpp  MemoryTests.cpp  ReservoirIntegrationTests.cpp
ReservoirEcho/reservoircpp_cpp/: CMakeLists.txt  README.md  py2cpp_transformer.py
ReservoirEcho/reservoircpp_cpp/examples/: CMakeLists.txt  basic_example.cpp
ReservoirEcho/reservoircpp_cpp/include/: _base.hpp  _version.hpp  activationsfunc.hpp  main.hpp  model.hpp  numpy.hpp  observables.hpp  setup.hpp  time.hpp  type.hpp  warnings.hpp
ReservoirEcho/reservoircpp_cpp/include/compat/: _base.hpp  _esn_online.hpp  compat.hpp  regression_models.hpp
ReservoirEcho/reservoircpp_cpp/include/compat/tests/: test_esn.hpp  test_esnonline.hpp  tests.hpp
ReservoirEcho/reservoircpp_cpp/include/compat/utils/: validation.hpp
ReservoirEcho/reservoircpp_cpp/include/datasets/: _chaos.hpp  _japanese_vowels.hpp  _santafe_laser.hpp  _seed.hpp  _utils.hpp  datasets.hpp
ReservoirEcho/reservoircpp_cpp/include/datasets/tests/: test_datasets.hpp
ReservoirEcho/reservoircpp_cpp/include/deep_tree_echo/: avatar_4e.hpp  core.hpp  unreal_integration.hpp
ReservoirEcho/reservoircpp_cpp/include/docs/source/: conf.hpp
ReservoirEcho/reservoircpp_cpp/include/experimental/: add.hpp  batchforce.hpp  experimental.hpp  norm.hpp  randomchoice.hpp  sklearn.hpp
ReservoirEcho/reservoircpp_cpp/include/experimental/spiking/: lif.hpp
ReservoirEcho/reservoircpp_cpp/include/experimental/tests/: test_spiking.hpp  tests.hpp
ReservoirEcho/reservoircpp_cpp/include/hyper/: hyper.hpp
ReservoirEcho/reservoircpp_cpp/include/nodes/: activations.hpp  concat.hpp  delay.hpp  esn.hpp  nodes.hpp
ReservoirEcho/reservoircpp_cpp/include/nodes/readouts/: base.hpp  force.hpp  lms.hpp  readouts.hpp  ridge.hpp  rls.hpp  sklearn_node.hpp
ReservoirEcho/reservoircpp_cpp/include/nodes/reservoirs/: intrinsic_plasticity.hpp  local_plasticity_reservoir.hpp  nvar.hpp  reservoirs.hpp
ReservoirEcho/reservoircpp_cpp/include/nodes/tests/: test_activations.hpp  test_delay.hpp  test_intrinsic_plasticity.hpp  test_io.hpp  test_local_plasticity_reservoir.hpp  test_nvar.hpp  test_reservoir.hpp  test_ridge.hpp  test_rls.hpp  test_scikitlearnnode.hpp  tests.hpp
ReservoirEcho/reservoircpp_cpp/include/reservoircpp/: model.hpp  node.hpp  numpy.hpp
ReservoirEcho/reservoircpp_cpp/include/reservoircpp/_base/: _ESNBase.hpp
ReservoirEcho/reservoircpp_cpp/include/reservoircpp/_esn/: ESN.hpp
ReservoirEcho/reservoircpp_cpp/include/reservoircpp/abc/: ABC.hpp  ABCMeta.hpp  abstractmethod.hpp
ReservoirEcho/reservoircpp_cpp/include/reservoircpp/contextlib/: contextmanager.hpp
ReservoirEcho/reservoircpp_cpp/include/reservoircpp/functools/: partial.hpp  wraps.hpp
ReservoirEcho/reservoircpp_cpp/include/reservoircpp/joblib/: Parallel.hpp  delayed.hpp
ReservoirEcho/reservoircpp_cpp/include/reservoircpp/math/: cos.hpp  sin.hpp
ReservoirEcho/reservoircpp_cpp/include/reservoirpy/: _base.hpp  _version.hpp  activationsfunc.hpp  mat_gen.hpp  node.hpp  observables.hpp  ops.hpp  reservoirpy.hpp  type.hpp
ReservoirEcho/reservoircpp_cpp/include/tests/: dummy_nodes.hpp  test_base.hpp  test_mat_gen.hpp  test_model.hpp  test_node.hpp  test_observables.hpp  tests.hpp
ReservoirEcho/reservoircpp_cpp/include/utils/: graphflow.hpp  model_utils.hpp  parallel.hpp  random.hpp  utils.hpp  validation.hpp
ReservoirEcho/reservoircpp_cpp/src/: _base.cpp  _version.cpp  activationsfunc.cpp  mat_gen.cpp  model.cpp  node.cpp  observables.cpp  ops.cpp  setup.cpp  type.cpp
ReservoirEcho/reservoircpp_cpp/src/compat/: _base.cpp  _esn.cpp  _esn_online.cpp  regression_models.cpp
ReservoirEcho/reservoircpp_cpp/src/datasets/: _chaos.cpp  _japanese_vowels.cpp  _santafe_laser.cpp  _seed.cpp  _utils.cpp
ReservoirEcho/reservoircpp_cpp/src/deep_tree_echo/: avatar_4e.cpp  core.cpp  unreal_integration.cpp
ReservoirEcho/reservoircpp_cpp/src/experimental/: add.cpp  batchforce.cpp  norm.cpp  randomchoice.cpp  sklearn.cpp
ReservoirEcho/reservoircpp_cpp/src/hyper/: _hyperplot.cpp  _hypersearch.cpp
ReservoirEcho/reservoircpp_cpp/src/nodes/: activations.cpp  concat.cpp  delay.cpp  esn.cpp  io.cpp
ReservoirEcho/reservoircpp_cpp/src/reservoirpy/: _base.cpp  _version.cpp  activationsfunc.cpp  mat_gen.cpp  model.cpp  node.cpp  observables.cpp  ops.cpp  type.cpp
ReservoirEcho/reservoircpp_cpp/src/tests/: dummy_nodes.cpp  test_activationsfunc.cpp  test_base.cpp  test_mat_gen.cpp  test_model.cpp  test_node.cpp  test_observables.cpp  test_ops.cpp
ReservoirEcho/reservoircpp_cpp/src/utils/: graphflow.cpp  model_utils.cpp  parallel.cpp  random.cpp  validation.cpp
ReservoirEcho/reservoircpp_cpp/test/: CMakeLists.txt  model_test.cpp  node_test.cpp
(+993 files in other folders)
